welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:9: error: value && is not a member of Int
	if (resteA=resteB && resteB==resteC) return true
                          ^lastDigit:9: error: type mismatch;
 found   : Unit
 required: Boolean
	if (resteA=resteB && resteB==resteC) return true
                  ^